--- a/meleon/src/styles/core.scss
+++ b/meleon/src/styles/core.scss
@@ -7,6 +7,12 @@
   font-family: 'Noto Sans KR', sans-serif;
   list-style: none;
   text-decoration: none;
+  font-weight: 400;
+}
+
+button {
+  background-color: transparent;
+  cursor: pointer;
 }
 
 html {
