feat(Video): search section, recommend section publishing

--- a/meleon/src/components/common/SearchBar/styles/search.bar.styles.css
+++ b/meleon/src/components/common/SearchBar/styles/search.bar.styles.css
@@ -1,14 +1,26 @@
-#root {
-  background-color: black;
-}
 #root .search-bar-root {
   width: 812px;
   height: 56px;
   background-color: #ffffff;
   border-radius: 4px;
   padding: 0 16px;
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 1024px) {
+  #root .search-bar-root {
+    max-width: 864px;
+    width: 100%;
+  }
+}
+@media (max-width: 720px) {
+  #root .search-bar-root {
+    max-width: 656px;
+    width: 100%;
+  }
 }
 #root .search-bar-root .form {
+  flex: 1;
   display: flex;
   align-items: center;
   padding: 0 16;
@@ -21,6 +33,11 @@
   border-left: 1px solid #e5e5e5;
   padding-left: 16px;
   height: 20px;
+}
+@media (max-width: 600px) {
+  #root .search-bar-root .form .input-container {
+    border: 0;
+  }
 }
 #root .search-bar-root .form .input-container .input {
   flex: 1;
