--- a/meleon/src/styles/_mixin.scss
+++ b/meleon/src/styles/_mixin.scss
@@ -1,5 +1,11 @@
 @import './variables';
 
+@mixin mobile {
+  @media (max-width: $breakpoint-mobile) {
+    @content;
+  }
+}
+
 @mixin tablet {
   @media (max-width: $breakpoint-tablet) {
     @content;
