--- a/meleon/src/styles/core.scss
+++ b/meleon/src/styles/core.scss
@@ -1,3 +1,6 @@
+@import './color';
+@import './mixin';
+
 * {
   margin: 0;
   padding: 0;
@@ -17,4 +20,134 @@ button {
 
 html {
   font-size: 16px;
+}
+
+#root {
+  .search-section {
+    width: 100%;
+    height: 390px;
+    display: flex;
+    padding-top: 180px;
+    justify-content: center;
+    background-color: $gray600;
+
+    .wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+
+      @include desktop {
+        padding: 0 80px;
+      }
+
+      @include tablet {
+        padding: 0 32px;
+      }
+
+      .tags-container {
+        display: flex;
+        gap: 8px;
+        flex-wrap: wrap;
+
+        .tag {
+          background-color: rgba(255, 255, 255, 0.2);
+          border-radius: 16px;
+          color: $white;
+          font-size: 14px;
+          padding: 7px 12px;
+        }
+      }
+    }
+  }
+
+  .recommend-section {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
+    .title {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      .span {
+        font-size: 24px;
+        font-weight: 700;
+        counter-reset: $black;
+      }
+    }
+
+    .cards-container {
+      top: 50px;
+      display: flex;
+      gap: 16px;
+      overflow-x: scroll;
+      width: 100vw;
+      transform: translateX(-140px);
+
+      @include desktop {
+        transform: translateX(-80px);
+      }
+
+      @include tablet {
+        transform: translateX(-32px);
+      }
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+      .card {
+        &:first-child {
+          margin-left: 140px;
+
+          @include desktop {
+            margin-left: 80px;
+          }
+
+          @include tablet {
+            margin-left: 32px;
+          }
+        }
+
+        display: flex;
+        flex-direction: column;
+        width: 260px;
+        height: 183px;
+        min-width: 260px;
+        max-height: 183px;
+
+        background-color: $gray100;
+        border: 1px solid $gray300;
+        padding: 24px;
+        border-radius: 4px;
+
+        .tag {
+          font-size: 24px;
+          font-weight: 600;
+          color: $black;
+          margin-bottom: 10px;
+        }
+
+        .description {
+          white-space: pre-wrap;
+          font-size: 15px;
+          color: $gray600;
+          line-height: 22px;
+          margin-bottom: 20px;
+        }
+
+        .count {
+          background-color: $gray300;
+          padding: 9px 12px;
+          color: $gray600;
+          font-size: 15px;
+          width: fit-content;
+          border-radius: 18px;
+        }
+      }
+    }
+  }
 }
