--- a/meleon/src/components/Music/styles/music.styles.scss
+++ b/meleon/src/components/Music/styles/music.styles.scss
@@ -2,7 +2,7 @@
 @import '../../../styles/mixin';
 
 #root {
-  .video-root {
+  .music-root {
     .main-section {
       padding: 56px 140px 120px;
 
