--- a/meleon/src/styles/core.css
+++ b/meleon/src/styles/core.css
@@ -19,6 +19,12 @@ html {
   font-size: 16px;
 }
 
+#root .page-root {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  min-height: 100vh;
+}
 #root .search-section {
   width: 100%;
   height: 390px;
@@ -57,12 +63,14 @@ html {
   padding: 7px 12px;
 }
 #root .recommend-section {
+  max-width: 1640px;
   position: relative;
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
 #root .recommend-section .title {
+  cursor: pointer;
   display: flex;
   align-items: center;
   gap: 6px;
@@ -70,7 +78,7 @@ html {
 #root .recommend-section .title .span {
   font-size: 24px;
   font-weight: 700;
-  counter-reset: #111111;
+  color: #111111;
 }
 #root .recommend-section .cards-container {
   top: 50px;
@@ -94,6 +102,7 @@ html {
   display: none;
 }
 #root .recommend-section .cards-container .card {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 260px;
@@ -104,6 +113,7 @@ html {
   border: 1px solid #dbdbdb;
   padding: 24px;
   border-radius: 4px;
+  cursor: pointer;
 }
 #root .recommend-section .cards-container .card:first-child {
   margin-left: 140px;
@@ -118,6 +128,9 @@ html {
     margin-left: 32px;
   }
 }
+#root .recommend-section .cards-container .card:last-child {
+  margin-right: 16px;
+}
 #root .recommend-section .cards-container .card .tag {
   font-size: 24px;
   font-weight: 600;
@@ -125,6 +138,7 @@ html {
   margin-bottom: 10px;
 }
 #root .recommend-section .cards-container .card .description {
+  height: 40px;
   white-space: pre-wrap;
   font-size: 15px;
   color: #767676;
@@ -132,12 +146,47 @@ html {
   margin-bottom: 20px;
 }
 #root .recommend-section .cards-container .card .count {
+  height: 36px;
   background-color: #dbdbdb;
-  padding: 9px 12px;
+  padding: 10px 12px;
   color: #767676;
   font-size: 15px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   border-radius: 18px;
+}
+#root .recommend-section .cards-container .card .hover {
+  position: absolute;
+  display: none;
+  right: 24px;
+  bottom: 24px;
+}
+#root .recommend-section .cards-container .card:hover {
+  border-color: #5c55fa;
+}
+#root .recommend-section .cards-container .card:hover .hover {
+  display: block;
+}
+#root .new-section {
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+@media (max-width: 720px) {
+  #root .new-section {
+    margin-top: 115px;
+  }
+}
+#root .new-section .title {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  cursor: pointer;
+}
+#root .new-section .title .span {
+  font-size: 24px;
+  font-weight: 700;
+  color: #111111;
 }/*# sourceMappingURL=core.css.map */
