--- a/meleon/src/styles/core.scss
+++ b/meleon/src/styles/core.scss
@@ -23,6 +23,13 @@ html {
 }
 
 #root {
+  .page-root {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    min-height: 100vh;
+  }
+
   .search-section {
     width: 100%;
     height: 390px;
@@ -63,19 +70,21 @@ html {
   }
 
   .recommend-section {
+    max-width: 1640px;
     position: relative;
     display: flex;
     flex-direction: column;
     gap: 24px;
 
     .title {
+      cursor: pointer;
       display: flex;
       align-items: center;
       gap: 6px;
       .span {
         font-size: 24px;
         font-weight: 700;
-        counter-reset: $black;
+        color: $black;
       }
     }
 
@@ -112,17 +121,22 @@ html {
           }
         }
 
+        &:last-child {
+          margin-right: 16px;
+        }
+
+        position: relative;
         display: flex;
         flex-direction: column;
         width: 260px;
         height: 183px;
         min-width: 260px;
         max-height: 183px;
-
         background-color: $gray100;
         border: 1px solid $gray300;
         padding: 24px;
         border-radius: 4px;
+        cursor: pointer;
 
         .tag {
           font-size: 24px;
@@ -132,6 +146,7 @@ html {
         }
 
         .description {
+          height: 40px;
           white-space: pre-wrap;
           font-size: 15px;
           color: $gray600;
@@ -140,13 +155,53 @@ html {
         }
 
         .count {
+          height: 36px;
           background-color: $gray300;
-          padding: 9px 12px;
+          padding: 10px 12px;
           color: $gray600;
           font-size: 15px;
           width: fit-content;
           border-radius: 18px;
         }
+
+        .hover {
+          position: absolute;
+          display: none;
+          right: 24px;
+          bottom: 24px;
+        }
+
+        &:hover {
+          border-color: $primary-blue;
+
+          .hover {
+            display: block;
+          }
+        }
+      }
+    }
+  }
+
+  .new-section {
+    margin-top: 120px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
+    @include tablet {
+      margin-top: 115px;
+    }
+
+    .title {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      cursor: pointer;
+
+      .span {
+        font-size: 24px;
+        font-weight: 700;
+        color: $black;
       }
     }
   }
