footer / splash publishing

--- a/meleon/src/components/Splash/styles/splash.style.scss
+++ b/meleon/src/components/Splash/styles/splash.style.scss
@@ -14,24 +14,21 @@
 .splash {
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   background-color: #555599;
   flex-direction: row;
   justify-content: center;
-  //align-items: center;
+  align-items: center;
   &-box {
-    //margin-left: 770px;
     width: 380px;
     height: 149px;
-    background-color: black;
-    //margin-top: 466px;
+
     display: flex;
     flex-wrap: wrap;
 
     justify-content: center;
-    align-self: center;
     div {
       height: 54.5px;
       @include font-setting(#fff, bold, 39px);
@@ -48,8 +45,9 @@
     height: 40px;
 
     position: absolute;
-    margin-left: 800px;
-    margin-top: 800px;
+    right: 140px;
+    bottom: 80px;
+
     .skip-fix {
       width: 100px;
       height: 40px;
@@ -71,10 +69,6 @@
 @media (max-width: 1024px) {
   .splash {
     width: 1024px;
-
-    &-button {
-      margin-left: 704px;
-    }
   }
 }
 
@@ -83,7 +77,7 @@
     width: 729px;
 
     &-button {
-      margin-left: 270px;
+      right: 270px;
     }
   }
 }
