--- a/meleon/src/styles/core.css
+++ b/meleon/src/styles/core.css
@@ -19,9 +19,12 @@ html {
   font-size: 16px;
 }
 
+#root {
+  min-height: 100vh;
+}
 #root .page-root {
-  position: absolute;
-  top: 0;
+  position: relative;
+  top: -84px;
   width: 100%;
   min-height: 100vh;
 }
