--- a/meleon/src/styles/core.scss
+++ b/meleon/src/styles/core.scss
@@ -23,9 +23,10 @@ html {
 }
 
 #root {
+  min-height: 100vh;
   .page-root {
-    position: absolute;
-    top: 0;
+    position: relative;
+    top: -84px;
     width: 100%;
     min-height: 100vh;
   }
