--- a/meleon/src/components/common/Footer/styles/footer.style.scss
+++ b/meleon/src/components/common/Footer/styles/footer.style.scss
@@ -50,13 +50,12 @@
     display: flex;
     position: relative;
     background-color: #000;
-
     &-location {
       width: 485px;
       height: 140px;
-      position: absolute;
-      top: 80px;
-      left: 140px;
+
+      margin-top: 80px;
+      margin-left: 7.3vw;
       button {
         @include font-setting(#fff, bold, 14px);
         margin-right: 10px;
@@ -79,9 +78,8 @@
     &-address {
       width: 150px;
       height: 123px;
-      position: absolute;
-      top: 80px;
-      right: 810px;
+      margin-top: 80px;
+      margin-left: 17.4vw;
       .address-white {
         @include font-setting(#fff, bold, 14px);
         margin-bottom: 10px;
@@ -96,7 +94,7 @@
       height: 73px;
       position: absolute;
       top: 80px;
-      right: 140px;
+      right: 7.3vw;
       div {
         @include font-setting(#fff, bold, 14px);
         margin-bottom: 24px;
@@ -104,6 +102,48 @@
       img {
         margin-right: 20px;
       }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .footer-info {
+    width: 1200px;
+    height: 387px;
+    &-location {
+      width: 400px;
+      height: 163px;
+      position: absolute;
+      top: 80px;
+      left: 80px;
+      margin: 0 0 0 0;
+      p {
+        font-size: 12px;
+        line-height: 2.2;
+        button {
+          font-size: 12px;
+        }
+      }
+    }
+    &-address {
+      position: absolute;
+      top: 80px;
+      right: 80px;
+      margin: 0 0 0 0;
+    }
+    &-social {
+      position: absolute;
+      top: 234px;
+      right: 75px;
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  .footer-info {
+    width: 720px;
+    &-location {
+      left: 32px;
     }
   }
 }
