feat(video):publishing

--- a/meleon/src/components/Video/styles/video.styles.css
+++ b/meleon/src/components/Video/styles/video.styles.css
@@ -4,10 +4,12 @@
 @media (max-width: 1024px) {
   #root .video-root .main-section {
     padding-left: 80px;
+    padding-right: 80px;
   }
 }
 @media (max-width: 720px) {
   #root .video-root .main-section {
     padding-left: 32px;
+    padding-right: 32px;
   }
 }/*# sourceMappingURL=video.styles.css.map */
