--- a/meleon/src/components/Video/styles/video.styles.scss
+++ b/meleon/src/components/Video/styles/video.styles.scss
@@ -8,10 +8,12 @@
 
       @include desktop {
         padding-left: 80px;
+        padding-right: 80px;
       }
 
       @include tablet {
         padding-left: 32px;
+        padding-right: 32px;
       }
     }
   }
