feat(mypage): 유저정보 탭 퍼블리싱

--- a/meleon/src/components/common/CInput/styles/cinput.styles.css
+++ b/meleon/src/components/common/CInput/styles/cinput.styles.css
@@ -45,6 +45,7 @@
   margin-right: 16px;
 }
 #root .cinput-root .input-container .input-btn.check-btn {
+  flex-shrink: 0;
   display: block;
   color: #5c55fa;
   text-decoration: underline;
