--- a/meleon/src/components/common/CInput/styles/cinput.styles.scss
+++ b/meleon/src/components/common/CInput/styles/cinput.styles.scss
@@ -47,6 +47,7 @@
         margin-right: 16px;
 
         &.check-btn {
+          flex-shrink: 0;
           display: block;
           color: $primary-blue;
           text-decoration: underline;
