--- a/meleon/src/styles/core.css
+++ b/meleon/src/styles/core.css
@@ -17,6 +17,7 @@ button {
 
 html {
   font-size: 16px;
+  touch-action: pan-y;
 }
 
 #root .page-root {
@@ -189,4 +190,37 @@ html {
   font-size: 24px;
   font-weight: 700;
   color: #111111;
+}
+#root .popup-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-y: scroll;
+  overflow-x: scroll;
+}
+#root .popup-container::-webkit-scrollbar {
+  display: none;
+}
+#root .popup-container .backdrop {
+  transition: opacity 0.3s;
+  position: absolute;
+  background-color: #000;
+  width: 100%;
+  height: 100%;
+  opacity: 0.6;
+  z-index: 5;
+}
+#root .popup-container .popup {
+  width: 100%;
+  padding: 0px 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 6;
+  transition: transform 0.3s ease-in-out;
 }/*# sourceMappingURL=core.css.map */
