--- a/meleon/src/styles/core.css
+++ b/meleon/src/styles/core.css
@@ -15,6 +15,10 @@ button {
   cursor: pointer;
 }
 
+div {
+  cursor: default;
+}
+
 html {
   font-size: 16px;
 }
@@ -62,6 +66,7 @@ html {
   color: #ffffff;
   font-size: 14px;
   padding: 7px 12px;
+  cursor: pointer;
 }
 #root .recommend-section {
   max-width: 1640px;
