--- a/meleon/src/styles/core.scss
+++ b/meleon/src/styles/core.scss
@@ -18,6 +18,10 @@ button {
   cursor: pointer;
 }
 
+div {
+  cursor: default;
+}
+
 html {
   font-size: 16px;
 }
@@ -65,6 +69,7 @@ html {
           color: $white;
           font-size: 14px;
           padding: 7px 12px;
+          cursor: pointer;
         }
       }
     }
