--- a/meleon/src/components/common/Footer/styles/footer.style.scss
+++ b/meleon/src/components/common/Footer/styles/footer.style.scss
@@ -45,7 +45,7 @@
   //   }
   // }
   &-info {
-    width: 100vw;
+    width: 100%;
     height: 303px;
     display: flex;
     position: relative;
@@ -106,9 +106,8 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1300px) {
   .footer-info {
-    width: 1200px;
     height: 387px;
     &-location {
       width: 400px;
@@ -139,11 +138,16 @@
   }
 }
 
-@media (max-width: 720px) {
+@media (max-width: 900px) {
   .footer-info {
-    width: 720px;
     &-location {
       left: 32px;
+    }
+    &-address {
+      right: 32px;
+    }
+    &-social {
+      right: 27px;
     }
   }
 }
