--- a/meleon/src/components/Music/styles/music.styles.css
+++ b/meleon/src/components/Music/styles/music.styles.css
@@ -1,6 +1,113 @@
 #root .music-root .main-section {
   padding: 56px 140px 120px;
 }
+#root .music-root .main-section .new-section .play-container {
+  width: 1640px;
+  border-top: 2px solid black;
+}
+#root .music-root .main-section .new-section .play-container .musicplay {
+  position: relative;
+  border-top: 1px solid #dbdbdb;
+  width: 1640px;
+  height: 84px;
+  display: flex;
+  align-items: center;
+}
+#root .music-root .main-section .new-section .play-container .musicplay-button {
+  margin-left: 10px;
+}
+#root .music-root .main-section .new-section .play-container .musicplay-image {
+  margin-left: 16px;
+}
+#root .music-root .main-section .new-section .play-container .musicplay-title {
+  position: absolute;
+  width: 260px;
+  height: 19px;
+  top: 23px;
+  left: 117px;
+  color: #111111;
+  font-size: 16px;
+  font-family: Pretendard;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+}
+#root .music-root .main-section .new-section .play-container .musicplay-artist {
+  position: absolute;
+  width: 260px;
+  height: 17px;
+  top: 44px;
+  left: 117px;
+  color: #767676;
+  font-size: 14px;
+  font-family: Pretendard;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+}
+#root .music-root .main-section .new-section .play-container .musicplay-tag {
+  color: #767676;
+  font-size: 14px;
+  font-family: Pretendard;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  position: absolute;
+  left: 417px;
+}
+#root .music-root .main-section .new-section .play-container .musicplay .progress-container-on, #root .music-root .main-section .new-section .play-container .musicplay .progress-container-off {
+  width: 320px;
+  display: flex;
+  align-items: center;
+  margin-left: 609px;
+  position: relative;
+}
+#root .music-root .main-section .new-section .play-container .musicplay .progress-container-on progress, #root .music-root .main-section .new-section .play-container .musicplay .progress-container-off progress {
+  width: 320px;
+  height: 3px;
+  -webkit-appearance: none;
+}
+#root .music-root .main-section .new-section .play-container .musicplay .progress-container-on ::-webkit-progress-bar, #root .music-root .main-section .new-section .play-container .musicplay .progress-container-off ::-webkit-progress-bar {
+  background-color: #dbdbdb;
+}
+#root .music-root .main-section .new-section .play-container .musicplay .progress-container-on ::-webkit-progress-value, #root .music-root .main-section .new-section .play-container .musicplay .progress-container-off ::-webkit-progress-value {
+  background-color: #5c55fa;
+}
+#root .music-root .main-section .new-section .play-container .musicplay .progress-container-on .point, #root .music-root .main-section .new-section .play-container .musicplay .progress-container-off .point {
+  width: 16px;
+  height: 16px;
+  background-color: #5c55fa;
+  border-radius: 50%;
+}
+#root .music-root .main-section .new-section .play-container .musicplay .progress-container-off ::-webkit-progress-value {
+  background-color: #767676;
+}
+#root .music-root .main-section .new-section .play-container .musicplay .progress-container-off .point {
+  display: none;
+}
+#root .music-root .main-section .new-section .play-container .musicplay .now-time {
+  color: #767676;
+  font-size: 13px;
+  font-family: Pretendard;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  margin-left: 10px;
+  margin-right: 5px;
+}
+#root .music-root .main-section .new-section .play-container .musicplay .play-time {
+  color: #111111;
+  font-size: 13px;
+  font-family: Pretendard;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+}
 @media (max-width: 1024px) {
   #root .music-root .main-section {
     padding-left: 80px;
